2008/12/?? Version 3.00-stable-4
- Right click menu added on e-mail addresses in email module with useful options
- Right click on e-mail attachment offers Save as option in the files module
- Bug fixes

2008/12/03 Version 3.00-stable-2
- Bug fixes
- Import/export of custom fields in addressbook (pro)
- Add /delete mail folders by right clicking the tree menu
- Added Spanish translation
- Added Brazilan Portugese translation

2008/11/24 Version 3.00-stable-1
- Last known bugs were fixed
- New caching system for the e-mail to impove performance.

2008/11/07 Version 3.00-unstable-19
Lot's of bugs were fixed from version 1 till 19. This should be the 
last "unstable" release.

- Changed to MySQLi improved PHP mysql extension
- Removed smart_addslashes and smart_stripslashes functions. GO runs best
  with magic_quotes_gpc=off now and escaping values that go into the database
  is done at the lowest level. Either by the MySQLi extension or in the
  GO database class. This makes GO safer and programmers don't have to worry about
  it anymore. 

- Added thumbnail view and Image viewer in files module
- E-mail blocks remote images for unknown senders
- Image attachments in e-mail can be viewed directly in GO with the image viewer (files mod required)
- Projects module was improved so it supports all 2.x features
- New Schedule call option at quotes, contacts and companies
- Support for all unicode characters in the filesystem module
- All filesystem paths are stored relative to the filesystem path configured in config.ph
  This makes it easier to move an installations and safe's space in the database.


2008/09/03 Version 3.00-unstable-1
-Complete rewrite of Group-Office with ExtJS (www.extjs.com).

2008/02/20 Version 2.18-stable-19
- Bug fixes
- Synchronization with some Sony Ericsson models fixed

2008/01/14 Version 2.18-stable-15
-Removed contact color lookup in email client because it slows down email the e-mail
 display with large addressbooks