@@ -28,6 +28,7 @@ $lang['common']['saveError']='Error while saving the data';
 $lang['common']['deleteError']='Error while deleting the data';
 $lang['common']['selectError']='Error trying to read the data';
 $lang['common']['missingField'] = 'You didn\'t fill in all the required fields.';
+$lang['common']['noFileUploaded']='No file was recieved';
 
 $lang['common']['salutation']='Salutation';
 $lang['common']['firstName'] = 'First name';
