@@ -1,3 +1,16 @@
+/**
+ * Copyright Intermesh
+ *
+ * This file is part of Group-Office. You should have received a copy of the
+ * Group-Office license along with Group-Office. See the file /LICENSE.TXT
+ *
+ * If you have questions write an e-mail to info@intermesh.nl
+ *
+ * @version $Id$
+ * @copyright Copyright Intermesh
+ * @author Merijn Schering <mschering@intermesh.nl>
+ */
+
 GO.calendar.CalendarDialog = function(config)
 {
 	if(!config)
@@ -5,11 +18,13 @@ GO.calendar.CalendarDialog = function(config)
 		config = {};
 	}
 	
-	this.propertiesTab = new Ext.Panel({
+	this.propertiesTab = new Ext.form.FormPanel({
+		url: GO.settings.modules.calendar.url+'action.php',		
+		defaultType: 'textfield',
+		waitMsgTarget:true,
 		title:GO.lang['strProperties'],
 		layout:'form',
 		anchor: '100% 100%',
-		defaults: {anchor: '100%'},
 		defaultType: 'textfield',
 		autoHeight:true,
 		cls:'go-form-panel',
@@ -17,17 +32,25 @@ GO.calendar.CalendarDialog = function(config)
 		labelWidth: 75,
    
 		items: [
-		this.selectUser = new GO.form.SelectUser({
-			fieldLabel: GO.lang.strUser,
-			disabled: !GO.settings.modules['email']['write_permission'],
-			value: GO.settings.user_id
-		}),
-		{
-			fieldLabel: GO.lang.strName,
-			name: 'name',
-			allowBlank:false
-
-		}
+			this.selectUser = new GO.form.SelectUser({
+				fieldLabel: GO.lang.strUser,
+				disabled: !GO.settings.modules['email']['write_permission'],
+				value: GO.settings.user_id,
+				anchor: '100%'
+			}),
+			{
+				fieldLabel: GO.lang.strName,
+				name: 'name',
+				allowBlank:false,
+				anchor: '100%'	
+			},this.exportButton = new Ext.Button({			
+				text:GO.lang.cmdExport,
+				disabled:true,
+				handler:function(){
+					document.location=GO.settings.modules.calendar.url+'export.php?calendar_id='+this.calendar_id;
+				},
+				scope:this
+			})
 		]
 	});
 
@@ -39,17 +62,60 @@ GO.calendar.CalendarDialog = function(config)
 	this.writePermissionsTab = new GO.grid.PermissionsPanel({
 		title: GO.lang.strWritePermissions
 	});
+	
+	var uploadFile = new GO.form.UploadFile({
+		inputName : 'ical_file',	   
+		max:1 			
+	});
+	
+	uploadFile.on('filesChanged', function(input, inputs){
+		this.importButton.setDisabled(inputs.getCount()==1);
+	}, this);
+	
 
-	//this.readPermissionsTab.render(document.body);
-	//this.writePermissionsTab.render(document.body);
-
-	this.formPanel = new Ext.form.FormPanel({
-		url: GO.settings.modules.calendar.url+'action.php',
-		//labelWidth: 75, // label settings here cascade unless overridden
-		defaultType: 'textfield',
+	this.importTab = new Ext.form.FormPanel({
+		fileUpload:true,
 		waitMsgTarget:true,
-		border:false,
-		items:[{
+		disabled:true,
+		title:GO.lang.cmdImport,
+		items: [{
+			xtype: 'panel',
+			html: GO.calendar.lang.selectIcalendarFile,
+			border:false	
+		},uploadFile,this.importButton = new Ext.Button({
+				xtype:'button',
+				disabled:true,
+				text:GO.lang.cmdImport,
+				handler: function(){						
+					this.importTab.form.submit({
+						//waitMsg:GO.lang.waitMsgUpload,
+						url:GO.settings.modules.calendar.url+'action.php',
+						params: {task: 'import', calendar_id:this.calendar_id},
+						success: function(form,action)
+						{				
+							uploadFile.clearQueue();		
+
+							if(action.result.success)
+							{
+								Ext.MessageBox.alert(GO.lang.strSuccess,action.result.feedback);
+							}else
+							{
+								Ext.MessageBox.alert(GO.lang.strError,action.result.feedback);
+							}						
+						},
+						failure: function(form, action) {
+							Ext.MessageBox.alert(GO.lang.strError, action.result.feedback);
+						},
+						scope: this
+					});
+				}, 
+				scope: this
+			})],
+		cls: 'go-form-panel'
+	});
+
+	
+	this.tabPanel = new Ext.TabPanel({
 			hideLabel:true,
 			deferredRender:false,
 			xtype:'tabpanel',
@@ -59,20 +125,20 @@ GO.calendar.CalendarDialog = function(config)
 			items:[
 			this.propertiesTab,
 			this.readPermissionsTab,
-			this.writePermissionsTab
+			this.writePermissionsTab,
+			this.importTab 
 			]
-		}]
-	});
-	
+		});
+
 	
 	GO.calendar.CalendarDialog.superclass.constructor.call(this,{
 					title: GO.calendar.lang.calendar,
 					layout:'fit',
 					modal:false,
 					height:500,
-					width:400,
+					width:450,
 						
-					items: this.formPanel,
+					items: this.tabPanel,
 					buttons:[
 					{
 						text:GO.lang.cmdOk,
@@ -111,6 +177,9 @@ Ext.extend(GO.calendar.CalendarDialog, Ext.Window, {
 		if(!this.rendered)
 			this.render(Ext.getBody());
 			
+		this.exportButton.setDisabled(true);
+		this.importTab.setDisabled(true);
+		
 		if(calendar_id > 0)
 		{
 			if(calendar_id!=this.calendar_id)
@@ -120,21 +189,18 @@ Ext.extend(GO.calendar.CalendarDialog, Ext.Window, {
 		}else
 		{
 			this.calendar_id=0;
-			this.formPanel.form.reset();
+			this.propertiesTab.form.reset();
 			this.propertiesTab.show();
 
 			this.readPermissionsTab.setDisabled(true);
 			this.writePermissionsTab.setDisabled(true);
-
-			//this.selectUser.setValue(GO.settings['user_id']);
-			//this.selectUser.setRawValue(GO.settings['name']);
 
 			GO.calendar.CalendarDialog.superclass.show.call(this);
 		}
 	},
 	loadCalendar : function(calendar_id)
 	{
-		this.formPanel.form.load({
+		this.propertiesTab.form.load({
 			url: GO.settings.modules.calendar.url+'json.php',
 			params: {
 				calendar_id:calendar_id,
@@ -146,6 +212,8 @@ Ext.extend(GO.calendar.CalendarDialog, Ext.Window, {
 				this.selectUser.setRawValue(action.result.data.user_name);
 				this.readPermissionsTab.setAcl(action.result.data.acl_read);
 				this.writePermissionsTab.setAcl(action.result.data.acl_write);
+				this.exportButton.setDisabled(false);
+				this.importTab.setDisabled(false);
 				GO.calendar.CalendarDialog.superclass.show.call(this);
 			},
 			failure:function(form, action)
@@ -157,7 +225,7 @@ Ext.extend(GO.calendar.CalendarDialog, Ext.Window, {
 	},
 	save : function(hide)
 	{
-		this.formPanel.form.submit({
+		this.propertiesTab.form.submit({
 				
 			url:GO.settings.modules.calendar.url+'action.php',
 			params: {
@@ -181,8 +249,6 @@ Ext.extend(GO.calendar.CalendarDialog, Ext.Window, {
 				{
 					this.hide();
 				}
-					
-					
 			},
 
 			failure: function(form, action) {
