@@ -1,4 +1,5 @@
 2008/12/?? Version 3.00-stable-4
+- Import icalendar attachments in e-mail
 - Right click menu added on e-mail addresses in email module with useful options
 - Right click on e-mail attachment offers Save as option in the files module
 - Bug fixes
